[package]
name = "telio-proxy"
version = "0.1.0"
edition = "2018"
license = "GPL-3.0-only"
repository = "https://github.com/NordSecurity/libtelio"
publish = false

[dependencies]
async-trait.workspace = true
crypto_box.workspace = true
futures.workspace = true
tracing.workspace = true
mockall = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "sync"] }

telio-crypto.workspace = true
telio-model.workspace = true
telio-proto.workspace = true
telio-sockets.workspace = true
telio-task.workspace = true
telio-utils.workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "test-util", "time"] }

telio-task = { workspace = true, features = ["test-util"] }
telio-test.workspace = true
rand = { workspace = true, features = ["std", "std_rng"] }
